--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -134,6 +134,22 @@ In order to establish an ED paradigm for task varieties that do not have an obje
   
   data_quest <- read.csv(here("Sampledata","COGERED_DATA.csv"), stringsAsFactors = FALSE, header = TRUE)
   colnames(data_quest)[1] <- "set" # rename the first column
+  
+  # remove unnecessary variables from questionnaire data frame
+  
+  data_quest <- subset(data_quest, select = -c(vl, date, preparatory_coged_complete, general_questions_timestamp, state,
+                                               general_questions_complete, inclusion, inclusion_0___1, inclusion_0___2, inclusion_0_2,
+                                               researcher_questions_complete, nasatlx_timestamp, nasatlx_complete, t1_psychopy_ed_csv,
+                                               t1_psychopy_ed_psydat, t1_psychopy_nback_csv, t1_psychopy_log, t1_psychopy_nback_psydat,
+                                               t1_psychopy_randch_log, t1_psychopy_randch_psydat, files_coged_complete, record_id_2, vl_er,
+                                               date_er, humid_bef_er, preparatory_ered_complete, emg_eeg, emg_vhdr, emg_vmrk,
+                                               er_ed_psychopy_txt, er_ed_psychopy_psydat, files_ered_complete, followup_ered_timestamp,
+                                               nachb_01, nachb_01_inhalt, nachb_02, nachb_02_inhalt, nachb_03, nachb_07, nachb_07_inhalt,
+                                               nachb_08, nachb_08_inhalt, nachb_08_haeufig, nachb_08_zurueck, followup_ered_complete,
+                                               nfc_timestamp, nfc_complete, bis_11_timestamp, bis_11_complete, bscs_timestamp,
+                                               bscs_complete, srs_timestamp, srs_complete, erq_erqse_timestamp, erq_erqse_complete,
+                                               who5_timestamp, who5_complete, acs_timestamp, acs_complete, cdrisc_timestamp,
+                                               cdrisc_complete, flexer_timestamp, flexer_complete))
 
 ```
 
@@ -487,11 +503,52 @@ In order to establish an ED paradigm for task varieties that do not have an obje
 
   # H3a: Subjective values predict individual NCS scores.
 
-#auc(data_SV$level[1:4], data_SV$sv[1:4], method = "trapezoid", sort = FALSE) ->> gives you 2.23, which can't be
+  # create an index for the rows in which the participants change
 
-# for each participant subjective values for 1-, 2-, 3-, and 4-back will be calculated
-# an area under the curve (AUC) will be calculated per participant
-# regression
+  subjectindex <- c(1,which(data_SV$subject != dplyr::lag(data_SV$subject)),nrow(data_SV))
+
+  # prepare empty data frame for the loop to feed into
+
+  data_hyp3 <- data.frame(subject = character(), auc = double())
+
+  # calculate AUC of SVs per subject
+  
+  for (i in 1:(length(subjectindex)-1)) {
+    
+    newdata <- data.frame(subject = data_SV$subject[subjectindex[i]],
+                         auc = auc(data_SV$level[subjectindex[i]:(subjectindex[i+1]-1)], data_SV$sv[subjectindex[i]:(subjectindex[i+1]-1)],
+                                   method = "trapezoid", sort = FALSE))
+    data_hyp3 <- rbind(data_hyp3, newdata)
+    
+  }
+
+  # prepare temporary data frame for loop to feed into
+  
+  data_nfc <- data.frame(subject = character(), nfc = double())
+  
+  # calculate NFC scores for every subject
+  
+  for (i in 1:(length(setindex)-1)) {
+    
+    nfc <- data_quest[setindex[i] + 2, grep("nfc", colnames(data_quest))]
+    nfc[ ,c(4,6,7,8,9,10,11,12,15,16)] <-  nfc[ ,c(4,6,7,8,9,10,11,12,15,16)] * -1
+    
+    data_nfc <- rbind(data_nfc, data.frame(subject = data_quest$subject[setindex[i]],
+                                           nfc = sum(nfc)))
+  }
+  
+  # merge the NFC data frame into the AUC data frame by row
+  
+  data_hyp3 <- merge(data_hyp3, data_nfc)
+  
+  # delete temporary variables
+  
+  remove(nfc, data_nfc)
+  
+  # calculate linear model to estimate prediction of NFC by SVs
+  
+  hypothesis3a <- summary(lm(data_hyp3$nfc ~ data_hyp3$auc))
+
 ```
 
 ```{r Hypothesis_3b, echo=FALSE, message=FALSE, warning=FALSE}
