--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11612,6 +11612,18 @@ These findings suggest that subjective listening effort depends on factors inclu
   publisher = {American Psychological Association ({APA})},
 }
 
+@Article{Makowski2019,
+  author  = {Dominique Makowski and Mattan S. Ben-Shachar and Daniel Lüdecke},
+  journal = {Journal of Open Source Software},
+  title   = {{bayestestR}: {Describing} effects and their uncertainty, existence and significance within the Bayesian framework},
+  year    = {2019},
+  number  = {40},
+  pages   = {1541},
+  volume  = {4},
+  doi     = {10.21105/joss.01541},
+  url     = {https://joss.theoj.org/papers/10.21105/joss.01541},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
