--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -1,5 +1,24 @@
 % Encoding: UTF-8
 
+@Article{Hart1988,
+  author     = {Hart, Sandra G. and Staveland, Lowell E.},
+  title      = {Development of {NASA}-{TLX} ({Task} {Load} {Index}): {Results} of empirical and theoretical research},
+  year       = {1988},
+  month      = jan,
+  pages      = {139--183},
+  volume     = {52},
+  abstract   = {The results of a multi-year research program to identify the factors associated with variations in subjective workload within and between different types of tasks are reviewed. Subjective evaluations of 10 workload-related factors were obtained from 16 different experiments. The experimental tasks included simple cognitive and manual control tasks, complex laboratory and supervisory control tasks, and aircraft simulation. Task-, behavior-, and subject-related correlates of subjective workload experiences varied as a function of difficulty manipulations within experiments, different sources of workload between experiments, and individual differences in workload definition. A multi-dimensional rating scale is proposed in which information about the magnitude and sources of six workload-related factors are combined to derive a sensitive and reliable estimate of workload.},
+  doi        = {10.1016/S0166-4115(08)62386-9},
+  editor     = {Hancock, Peter A. and Meshkati, Najmedin},
+  file       = {:Hart1988 - Development of NASA TLX (Task Load Index)_ Results of Empirical and Theoretical Research.html:URL},
+  language   = {en},
+  publisher  = {North-Holland},
+  series     = {Human {Mental} {Workload}},
+  shorttitle = {Development of {NASA}-{TLX} ({Task} {Load} {Index})},
+  url        = {https://www.sciencedirect.com/science/article/pii/S0166411508623869},
+  urldate    = {2021-08-24},
+}
+
 @Article{Nassar2012,
   author       = {Matthew R Nassar and Katherine M Rumsey and Robert C Wilson and Kinjan Parikh and Benjamin Heasly and Joshua I Gold},
   journal      = {Nature Neuroscience},
@@ -11622,6 +11641,44 @@ These findings suggest that subjective listening effort depends on factors inclu
   volume  = {4},
   doi     = {10.21105/joss.01541},
   url     = {https://joss.theoj.org/papers/10.21105/joss.01541},
+}
+
+@Article{Harris2019,
+  author     = {Harris, Paul A. and Taylor, Robert and Minor, Brenda L. and Elliott, Veida and Fernandez, Michelle and O'Neal, Lindsay and McLeod, Laura and Delacqua, Giovanni and Delacqua, Francesco and Kirby, Jacqueline and Duda, Stephany N.},
+  journal    = {Journal of Biomedical Informatics},
+  title      = {The {REDCap} consortium: {Building} an international community of software platform partners},
+  year       = {2019},
+  issn       = {1532-0464},
+  month      = jul,
+  pages      = {103208},
+  volume     = {95},
+  abstract   = {The Research Electronic Data Capture (REDCap) data management platform was developed in 2004 to address an institutional need at Vanderbilt University, then shared with a limited number of adopting sites beginning in 2006. Given bi-directional benefit in early sharing experiments, we created a broader consortium sharing and support model for any academic, non-profit, or government partner wishing to adopt the software. Our sharing framework and consortium-based support model have evolved over time along with the size of the consortium (currently more than 3200 REDCap partners across 128 countries). While the “REDCap Consortium” model represents only one example of how to build and disseminate a software platform, lessons learned from our approach may assist other research institutions seeking to build and disseminate innovative technologies.},
+  doi        = {10.1016/j.jbi.2019.103208},
+  file       = {:Harris2019 - The REDCap Consortium_ Building an International Community of Software Platform Partners.pdf:PDF},
+  keywords   = {Medical informatics, Electronic data capture, Clinical research, Translational research},
+  language   = {en},
+  shorttitle = {The {REDCap} consortium},
+  url        = {https://www.sciencedirect.com/science/article/pii/S1532046419301261},
+  urldate    = {2021-08-24},
+}
+
+@Article{Harris2009,
+  author   = {Harris, Paul A. and Taylor, Robert and Thielke, Robert and Payne, Jonathon and Gonzalez, Nathaniel and Conde, Jose G.},
+  journal  = {Journal of Biomedical Informatics},
+  title    = {Research electronic data capture ({REDCap})—{A} metadata-driven methodology and workflow process for providing translational research informatics support},
+  year     = {2009},
+  issn     = {1532-0464},
+  month    = apr,
+  number   = {2},
+  pages    = {377--381},
+  volume   = {42},
+  abstract = {Research electronic data capture (REDCap) is a novel workflow methodology and software solution designed for rapid development and deployment of electronic data capture tools to support clinical and translational research. We present: (1) a brief description of the REDCap metadata-driven software toolset; (2) detail concerning the capture and use of study-related metadata from scientific research teams; (3) measures of impact for REDCap; (4) details concerning a consortium network of domestic and international institutions collaborating on the project; and (5) strengths and limitations of the REDCap system. REDCap is currently supporting 286 translational research projects in a growing collaborative network including 27 active partner institutions.},
+  doi      = {10.1016/j.jbi.2008.08.010},
+  file     = {:Harris2009 - Research Electronic Data Capture (REDCap)—A Metadata Driven Methodology and Workflow Process for Providing Translational Research Informatics Support.pdf:PDF},
+  keywords = {Medical informatics, Electronic data capture, Clinical research, Translational research},
+  language = {en},
+  url      = {https://www.sciencedirect.com/science/article/pii/S1532046408001226},
+  urldate  = {2021-08-24},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
