--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -1,11 +1,28 @@
 % Encoding: UTF-8
 
-@Article{simmons2012,
+@Article{Simmons2012,
   author  = {Simmons, J. P. and Nelson, L. D. and Simonsohn, U. A.},
   journal = {SSRN Electronic Journal},
   title   = {A 21 word solution},
   year    = {2012},
   doi     = {10.2139/ssrn.2160588},
+}
+
+@Article{Wessa2010,
+  author  = {Wessa, M. and Kanske, P. and Neumeister, P. and Bode, K. and Heissler, J. and Schönfelder, S.},
+  journal = {Zeitschrift für Klinische Psychologie und Psychotherapie},
+  title   = {EmoPicS: Subjective und psychophysiologische Evalueation neuen Bildmaterials für die klinisch-biopsychologische Forschung},
+  year    = {2010},
+  number  = {Suppl 1/11},
+  pages   = {77},
+  volume  = {39},
+}
+
+@Book{Lang2008,
+  author    = {Lang, P. J. and Bradley, M. M. and Cuthbert, B. N.},
+  publisher = {University of Florida},
+  title     = {International affective picture system (IAPS): Affective ratings of pictures and instruction manual},
+  year      = {2008},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
