--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -9,11 +9,13 @@ csl: apa7.csl
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 library(targets)
+library(readxl)
+library(here)
 ```
 
 # 2. Method
 
-"We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study" in compliance with the 21-word-solution of open science [@simmons2012]
+"We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study" in compliance with the 21-word-solution of open science [@Simmons2012]
 
 ## 2.1 Power analysis and participants
 
@@ -27,4 +29,11 @@ All session took place in a shielded cabin with constant lighting. Participants 
 
 The ER task followed a block design (see Figure X). Participants were told to actively view neutral and negative pictures (see [2.4. Stimuli](##stimuli)).
 
+```{r stimvalues, echo = FALSE}
+
+stim
+
+```
 ## 2.4. Stimuli
+
+Pictures used in the paradigm were selected from the Emotional Picture Set (EmoPicS) [@Wessa2010] and the International Affective Picture System (IAPS) [@Lang2008]. The 20 neutral pictures (Valence (V): _M_ $\pm$ _SD_ = 4.81 $\pm$ 0.52; Arousal (A): _M_ $\pm$ _SD_ = 3.00 $\pm$ 0.65)
