--- a/06_Paper/ER-ED/method.tex
+++ b/06_Paper/ER-ED/method.tex
@@ -119,15 +119,32 @@ told to actively view neutral and negative pictures (see
 \protect\hyperlink{ux5cux23stimuli}{2.4. Stimuli}).
 
 \hypertarget{stimuli}{%
-\subsection*{2.4. Stimuli}\label{stimuli}}
-\addcontentsline{toc}{subsection}{2.4. Stimuli}
+\subsection{2.4. Stimuli}\label{stimuli}}
+
+Pictures used in the paradigm were selected from the Emotional Picture
+Set (EmoPicS) (Wessa et al., 2010) and the International Affective
+Picture System (IAPS) (Lang et al., 2008). The 20 neutral pictures
+(Valence (V): \emph{M} \(\pm\) \emph{SD} = 4.81 \(\pm\) 0.52; Arousal
+(A): \emph{M} \(\pm\) \emph{SD} = 3.00 \(\pm\) 0.65)
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
-\leavevmode\hypertarget{ref-simmons2012}{}%
+\leavevmode\hypertarget{ref-Lang2008}{}%
+Lang, P. J., Bradley, M. M., \& Cuthbert, B. N. (2008).
+\emph{International affective picture system (IAPS): Affective ratings
+of pictures and instruction manual}. University of Florida.
+
+\leavevmode\hypertarget{ref-Simmons2012}{}%
 Simmons, J. P., Nelson, L. D., \& Simonsohn, U. A. (2012). A 21 word
 solution. \emph{SSRN Electronic Journal}.
 \url{https://doi.org/10.2139/ssrn.2160588}
+
+\leavevmode\hypertarget{ref-Wessa2010}{}%
+Wessa, M., Kanske, P., Neumeister, P., Bode, K., Heissler, J., \&
+Schönfelder, S. (2010). EmoPicS: Subjective und psychophysiologische
+evalueation neuen bildmaterials für die klinisch-biopsychologische
+forschung. \emph{Zeitschrift für Klinische Psychologie Und
+Psychotherapie}, \emph{39}(Suppl 1/11), 77.
 
 \end{CSLReferences}
 
